iaac/aqualog.cylindric.net/kube-configs/backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: aqualog
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: aqualog
  labels:
    app: backend
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - env:
        - name: AQUALOG_APP_ENV
          value: "dev"
        - name: AQUALOG_API_VERSION
          value: "v1"
        - name: AQUALOG_LOG_LEVEL
          value: "INFO"
        - name: AQUALOG_OAUTH_ISSUER_URL
          value: "https://aqualog-auth.cylindric.net/application/o/aqualog/"
        - name: AQUALOG_OAUTH_AUDIENCE
          value: "..."
        image: registry.digitalocean.com/aqualog/aqualog-backend:latest
        imagePullPolicy: Always
        name: backend
        ports:
        - containerPort: 8000
          name: backend-web
          protocol: TCP
        resources: {}
        stdin: true
        tty: true
      restartPolicy: Always
