iaac/aqualog.cylindric.net/kube-configs/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aqualog-ingress
  namespace: aqualog
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - aqualog-api.cylindric.net
    secretName: aqualog-tls
  rules:
  - host: "aqualog-api.cylindric.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend
            port:
              number: 8000
